test/parsing/errors/newWithoutArgs.chpl
class Foo {
  var x : int;
}

var y = new Foo;
